style.css
@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

*, *::before, *::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

:root {
    --white: #fefefe;
    --title: 'Kaushan Script', 'cursive';
    --font-page: 'Roboto', sans-serif;
    --font-size: 1.4rem;
}

body {
    background: url('/dist/icons/oven.jpg');
    font-size: 1em;
    font-family: var(--font-page);
    height: 100vh;
}

.content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

#tab-content {
    padding: 20px;
}

.navBar {
    font-size: 3rem;
    font-family: var(--title);
    color: var(--white);
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(15px) saturate(60%) contrast(110%) brightness(130%);
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    padding: 1rem;
}

.buttons {
    display: flex;
    justify-content: center;
    gap: 10px;
}

.buttons button {
    color: var(--white);
    font-size: var(--font-size);
    height: 60px;
    width: 120px;
    background: none;
    border: 0;
    transition: .3s;
}

.buttons button:hover {
    scale: 1.1;
    border-bottom: 3px solid #FFF;
}

@media (max-width: 450px) {
    .buttons {
        display:flex;
        justify-content: center;
        flex-direction: column;
    }
}

.active {
    background-color: rgb(28, 214, 59);
}

.tab {
    outline: none;
    border: none;
}

.home-tab {
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: var(--white);
    align-items: center;
    margin: 20px;
    gap: 40px;
}

.intro-class {
    display: flex;
    justify-content: center;
    flex-direction: column;
    background-color: rgba(68, 54, 54, 0.3);
    backdrop-filter: blur(30px) saturate(70%) contrast(120%) brightness(110%);
    width: 400px;
    max-width: fit-content;
    font-size: var(--font-size);
    padding: 20px;
    border-radius: 20px;
    gap: 10px;
}

.intro-class h1 {
    display: flex;
    justify-content: center;
}

.hours-class {
    display: flex;
    justify-content: center;
    flex-direction: column;
    background-color: rgba(68, 54, 54, 0.3);
    backdrop-filter: blur(30px) saturate(70%) contrast(120%) brightness(110%);
    font-size: var(--font-size);
    min-width: 400px;
    padding: 20px;
    border-radius: 20px;
    gap: 10px;
}


@media (max-width: 445px) {
    .hours-class {
        min-width: fit-content;
    }
}
.hours-class h1 {
    display: flex;
    justify-content: center;
}

.menu-content {
    display: grid;
    grid-template-columns: repeat(2, minmax(300px, 1fr));
    justify-items: center;
    margin: 0 auto 0 auto;
    color: var(--white);
    gap: 1.5rem;
    padding: 1.5rem;
    border-radius: 20px;
    background-color: rgba(68, 54, 54, 0.3);
    backdrop-filter: blur(20px) saturate(70%) contrast(120%) brightness(110%);
    max-width: 900px;
}

.menu-content img {
    border-radius: 10px;
    width: 100%;
    height: 80%;
    object-fit: cover;
}

.menu-item {
    display: flex;
    justify-content: center;
    flex-direction: column;
    max-width: 300px;
    min-width: fit-content;
    gap: 20px;
}

.menu-item > div {
    font-size: var(--font-size);
}

@media (max-width: 920px) {
    .menu-content {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        color: var(--white);
        gap: 10px;
        border-radius: 20px;
        padding: 1.5em;
        background-color: rgba(68, 54, 54, 0.3);
        backdrop-filter: blur(20px) saturate(70%) contrast(120%) brightness(110%);
    }
}

.info-tab {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    color: var(--white);
    gap: 20px;
}

.number-info {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 300px;
    min-width: fit-content;
    gap: 20px;
    padding: 40px;
    border-radius: 20px;
    font-size: var(--font-size);
    background-color: rgba(68, 54, 54, 0.3);
    backdrop-filter: blur(20px) saturate(70%) contrast(120%) brightness(110%);
    margin-top: 10rem;
}

.location-info {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 300px;
    min-width: fit-content;
    gap: 20px;
    padding: 40px;
    border-radius: 20px;
    font-size: var(--font-size);
    background-color: rgba(68, 54, 54, 0.3);
    backdrop-filter: blur(20px) saturate(70%) contrast(120%) brightness(110%);
    margin-bottom: 12rem;
}

.footer {
    display: flex;
    justify-content: center;
    color: var(--white);
    font-size: var(--font-size);
    gap: 10px;
    padding: 20px;
    width: 100%;
    min-width: fit-content;
    background-color: rgba(68, 54, 54, 0.3);
    backdrop-filter: blur(20px) saturate(70%) contrast(120%) brightness(110%);
}

.footer a img {
    outline: none;
    border-radius: 100%;
    scale: 1.3;
    transition: .3s;
}

.footer a img:hover {
    box-shadow: 0 0 20px white;
}

